# GraphqlBasics

./: MergeRequest.csv  countries.csv  extractMergeRequests.py  extractRepo.py  extractRepoAndPullRequests.py  helpcode.js  helpcode2.py  jupyter_practise.ipynb  learningGraphQL.py  merge_request.csv  merge_request_with_all_repo.csv  pyproject.toml  repositories.json  repositories.txt  usinghttpx.py
