[tool.poetry]
name = "graphql"
version = "0.1.0"
description = ""
authors = ["Anupam1223 <50481498+Anupam1223@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
httpx = "^0.19.0"
requests = "^2.26.0"
flake8 = "^3.9.2"
black = "^21.9b0"
python-graphql-client = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
